GearsetPOC/force-app/main/default/objects/GDPR_Request__c/GDPR_Request__c.object-meta.xml
<CustomObject>
    <label>GDPR Request</label>
    <nameField>
        <displayFormat>GDPR-{000000}</displayFormat>
        <label>GDPR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDPR Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>