GearsetPOC/force-app/main/default/objects/GDPR_Request__c/fields/Additional_Request__c.field-meta.xml
<CustomField>
    <fullName>Additional_Request__c</fullName>
    <label>Additional Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>