GearsetPOC/force-app/main/default/objects/GDPR_Request__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GDPR Requests</relationshipLabel>
    <relationshipName>GDPR_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>