GearsetPOC/force-app/main/default/objects/GDPR_Request__c/fields/Do_Not_Share_With_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Share_With_Third_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Share With Third Party</label>
    <type>Checkbox</type>
</CustomField>