GearsetPOC/force-app/main/default/objects/GDPR_Request__c/fields/Objection_to_Data_Processing__c.field-meta.xml
<CustomField>
    <fullName>Objection_to_Data_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Objection to Data Processing</label>
    <type>Checkbox</type>
</CustomField>