GearsetPOC/force-app/main/default/objects/GDPR_Request__c/fields/Request_For_Data_Processing_Information__c.field-meta.xml
<CustomField>
    <fullName>Request_For_Data_Processing_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request For Data Processing Information</label>
    <type>Checkbox</type>
</CustomField>