GearsetPOC/force-app/main/default/objects/GDPR_Request__c/fields/Request_To_Update_Data__c.field-meta.xml
<CustomField>
    <fullName>Request_To_Update_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request To Update Data</label>
    <type>Checkbox</type>
</CustomField>