GearsetPOC/force-app/main/default/objects/GDPR_Request__c/fields/Unsubscribe_From_Marketing_or_Research__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_From_Marketing_or_Research__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribe From Marketing or Research</label>
    <type>Checkbox</type>
</CustomField>