GearsetPOC/force-app/main/default/objects/GDPR_Request__c/listViews/All_Requests.listView-meta.xml
<ListView>
    <fullName>All_Requests</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Access_Personal_Data__c</columns>
    <columns>Erase_Personal_Data__c</columns>
    <columns>Unsubscribe_From_Marketing_or_Research__c</columns>
    <columns>Do_Not_Share_With_Third_Party__c</columns>
    <columns>Objection_to_Data_Processing__c</columns>
    <columns>Request_For_Data_Processing_Information__c</columns>
    <columns>Request_To_Update_Data__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests</label>
</ListView>